# AutonomousNavigation

./: README.md
Modelos/: Base_Scene.ttt  Base_Scene_1.ttt  Base_Scene_2.ttt  CenaParedeVermelha.ttt  PadraoA.ttt  PadraoA_sem obstaculos.ttt  PadraoB.ttt  PadraoC.ttt  PadraoF.ttt  PadraoG.ttt  PadraoH.ttt  PadraoI.ttt  Robo.ttt  Scene_middle_wall.ttt  pioneer-MNN.ttt
ModularNN/: CMakeLists.txt  Cinematica.cpp  Cinematica.h  ModularNN.kdev4  Modulo.cpp  Modulo.h  RedeNeuralModular.cpp  RedeNeuralModular.h  main.cpp
ModularNN/.kdev4/: ModularNN.kdev4
Python VREP/: EP.py  EP2SLP.py  MLP.py  MLP_I.py  SLP.py  SLP_A.py  SLP_B.py  SLP_C.py  SLP_D.py  SLP_E.py  SLP_F.py  SLP_G.py  SLP_H.py  SLP_I.py  best_fitnessA.txt  best_fitnessH.txt  best_fitnessI.txt  blending.py  cinematica.py  controle.py  generateGraph.py  generatePredictions.py  localization.py  navegacao.py  plot.py  plotFitness.py  setPesosRede.py  treinamento.py  treinamento2.py
Python VREP/PadraoA/: EntradaA.txt  SaidaA.txt
Python VREP/PadraoB/: EntradaB.txt  SaidaB.txt
Python VREP/PadraoC/: EntradaC.txt  SaidaC.txt
Python VREP/PadraoD/: EntradaD.txt  SaidaD.txt
Python VREP/PadraoE/: EntradaE.txt  SaidaE.txt
Python VREP/PadraoF/: EntradaF.txt  SaidaF.txt  Treinamento1.txt  Treinamento10.txt  Treinamento2.txt  Treinamento3.txt  Treinamento4.txt  Treinamento5.txt  Treinamento6.txt  Treinamento7.txt  Treinamento8.txt  Treinamento9.txt
Python VREP/PadraoG/: EntradaG.txt  SaidaG.txt  Treinamento1.txt  Treinamento10.txt  Treinamento2.txt  (+7 more)
RoboDuasRodas/: CMakeLists.txt  RoboDuasRodas.kdev4  main.cpp
(+58 files in other folders)
